--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,3 +1,3 @@
 # These are supported funding model platforms
 
-custom: # Replace with up to 4 custom sponsorship URLs e.g., ['https://redplexmc.craftingstore.net']
+custom: https://redplexmc.craftingstore.net
